--- a/online_survey/templates/completion.html
+++ b/online_survey/templates/completion.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1>Thank you from completing the survey</h1>
+<h1>Thank you for completing the survey!</h1>
 <form method="GET" action="{{ url_for ('show_pick_survey_form') }}">
     <input type="submit" id="submit" name="submit" value="Continue">
 </form>
