--- a/online_survey/templates/base.html
+++ b/online_survey/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="wrapper">
-<header>Online Survey</header>
+<header>Survey Tool</header>
 <main>
   {% block content %}CONTENT HERE{% endblock %}
 </main>
