--- a/online_survey/templates/pick-survey.html
+++ b/online_survey/templates/pick-survey.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1>Create, take, or download results of a survey!</h1>
+<h1>A tool to create and administer surveys</h1>
 <form method="POST" name="create_survey" action="/create-survey">
   <!--  -->
   <input type="submit" value="Create a survey" />
